<resources>
    <string name="app_name">PersonalFinanceTrackerApp</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="income_unchecked_expense">Income (unchecked = Expense)</string>
    <string name="save">Save</string>
    <string name="all_transactions">All Transactions</string>
    <string name="budget_overview">Budget Overview</string>
    <string name="set_your_monthly_budget">Set Your Monthly Budget</string>
    <string name="you_ve_used_50_of_your_budget">You\'ve used 50% of your budget</string>
    <string name="great_job_you_re_spending_wisely">Great job! You\'re spending wisely</string>
    <string name="weekly_comparison">Weekly Comparison</string>
    <string name="spending_breakdown">Spending Breakdown</string>
    <string name="total">Total</string>
    <string name="food">Food</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="interest_money">Interest Money</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="good_afternoon_minuli">Good afternoon, Minuli</string>
    <string name="april_15_2023">April 15, 2023</string>
    <string name="add_income">➕ Add Income</string>
    <string name="add_expense">➖ Add Expense</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View All</string>
</resources>